--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.6.18"
+dotenv = "0.15.0"
 hyper = { version = "0.14.26", features = ["full"] }
 notify = "6.0.0"
 serde = { version = "1.0.163", features = ["derive"] }
