--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 axum = "0.6.18"
 dotenv = "0.15.0"
 hyper = { version = "0.14.26", features = ["full"] }
+lettre = "0.10.4"
 notify = "6.0.0"
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = "1.0.96"
