--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,4 @@ bytes = "1.3.0"
 lazy_static = "1.4.0"
 leb128 = "0.2.5"
 thiserror = "1.0.40"
+tower-http = { version = "0.4.0", features = ["cors"] }
