--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = {version = "0.6.18", features = ["ws"]}
+axum = { version = "0.6.18", features = ["ws", "headers"] }
+futures-util = { version = "0.3.28", default-features = false, features = [
+  "sink",
+  "std",
+] }
 axum-server = { version = "0.5.1", features = ["tls-rustls"] }
 dotenv = "0.15.0"
 hyper = { version = "0.14.26", features = ["full"] }
